--- a/style.css
+++ b/style.css
@@ -1,3 +1,34 @@
-head{
-   text-align: centre
+body {
+  background-color: white;
+	padding: 30px;
+	max-width: 350px;
+	margin: auto;
+}
+
+.newspaper {
+	background-color: antiquewhite;
+	font-family: "Times New Roman", Times, serif;
+	font-weight: bold;
+}
+
+.magazine1  {
+  background-color: teal;
+  color:white;
+  font-family: Verdana;
+	font-weight: 900;
+	text-transform: uppercase; 
+}
+
+.magazine2 {
+	background-image: url('canvas.png');
+  color: fuchsia;
+  font-family:;
+	font-weight: 900;
+}
+
+.comic {
+  background-color:Black ;
+  color:red;
+  font-weight:bold;
+  font-family: 'Barrio', cursive;
 }
