--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+span
+{
+	display: inline-block; 
+	margin: 8px; 
+	box-shadow: 1px 2px 2px grey; 
+}
+
 body {
   background-color: white;
 	padding: 30px;
