--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   text-align: center;
   margin: 5px;
 }
-#coding {
+#Cooking {
   font-size: 40px;
   font-weight: bold;
   font-family: "Courier New";
