--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   background: linear-gradient(red, magenta);
   border-radius: 20px; 
 }
-#mimi {
+#sewing {
   font-size: 40px;
   font-weight: bold;
   font-family: Impact;
