--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
   font-family: Goudy Old Style;
   padding: 50px 30px;
   border-radius: 20px;
-  background: linear-gradient(tomato,orange,yellow,palegreen,olivedrab,lightskyblue,mediumblue,mediumslateblue,purple);
+  background: linear-gradient(palegreen,olivedrab,lightskyblue,mediumblue,mediumslateblue,purple);
   
 }
 
