--- a/style.css
+++ b/style.css
@@ -19,21 +19,19 @@ body {
 #mimi {
   font-size: 40px;
   font-weight: bold;
-  font-family: Impact;
+  font-family: "Courier New";
   padding: 50px 30px;
-  background: linear-gradient(purple, slateblue);
+  background: linear-gradient(red, magenta);
   border-radius: 20px;
-  text-shadow: 2px 2px grey;
 }
 #rainbows {
   font-size: 40px;
   font-weight: bold;
-  font-family: Goudy Old Style;
+  font-family: "Courier New";
   padding: 50px 30px;
+  background: linear-gradient(red, magenta);
   border-radius: 20px;
-  background: linear-gradient(palegreen,olivedrab,lightskyblue,mediumblue,mediumslateblue,purple);
-  
-}
+  }
 
 
 
