--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
   font-weight: bold;
   font-family: "Courier New";
   padding: 50px 30px;
-  background: linear-gradient(red, magenta);
+  background: linear-gradient(orangered, coral, lightsalmon);
   border-radius: 20px;
 }
 #rainbows {
