--- a/cooking/lemoncake.css
+++ b/cooking/lemoncake.css
@@ -9,5 +9,5 @@ body{
   font-family:algerian;
    color: gray;
    text-align:left;
-   background-image: url("http://apumpkinandaprincess.com/wp-content/uploads/2014/05/Double-Chocolate-Oreo-Milkshake-Recipe.jpg");
+   background-image: url("https://github.com/MimiDoodleGirl101/MimiDoodleGirl101.github.io/blob/master/cooking/recipe-image-legacy-id--9159_10.jpg");
 }
