--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-   background-image: url("marble.jpg");
+   background-image: url("https://cdn.shopify.com/s/files/1/2010/7091/products/26.-Marble_850x.jpg?v=1494974167");
 }
 .sticker {
   display: inline-block;
