--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   font-weight: bold;
   font-family: "Courier New";
   padding: 50px 30px;
-  background: (paleturquoise);
+  background-color: (paleturquoise);
   border-radius: 20px; 
 }
 #mimi {
@@ -18,7 +18,7 @@
   font-weight: bold;
   font-family: "Courier New";
   padding: 50px 30px;
-  background: (pink);
+  background-color: (pink);
   border-radius: 20px;
 }
 #rainbows {
@@ -26,7 +26,7 @@
   font-weight: bold;
   font-family: "Courier New";
   padding: 50px 30px;
-  background: (lightgray);
+  background-color: (lightgray);
   border-radius: 20px;
   }
 
