--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   font-weight: bold;
   font-family: "Courier New";
   padding: 50px 30px;
-  background-color: rgb(255,192,203);
+  background-color: rgb(255, 192, 203);
   border-radius: 20px; 
 }
 #mimi {
@@ -18,7 +18,7 @@
   font-weight: bold;
   font-family: "Courier New";
   padding: 50px 30px;
-  background-color: rgb(211,211,211);
+  background-color: rgb(211, 211, 211);
   border-radius: 20p;
 }
 #rainbows {
@@ -26,7 +26,7 @@
   font-weight: bold;
   font-family: "Courier New";
   padding: 50px 30px;
-  background-color: rgb(175,238,238);
+  background-color: rgb(175, 238, 238);
   border-radius: 20px;
   }
 
